<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.reading.cs2ja16.LevelCreation"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="400dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clear_all"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/clear_all" />

        <Button
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/back_to_menu" />


        <Button
            android:id="@+id/ready"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/confirm" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/snakegame_level_creator"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/level_creation_info" />

        <EditText
            android:id="@+id/score"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:hint="@string/score_to_win"
            android:inputType="number" />

        <EditText
            android:id="@+id/obstacles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_of_obstacles"
            android:inputType="number" />

        <EditText
            android:id="@+id/black_enemies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_of_regular_enemies"
            android:inputType="number" />

        <EditText
            android:id="@+id/pink_enemies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_of_smart_enemies"
            android:inputType="number" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
